[package]
name = "samsvar"
version = "0.1.0"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "core functionality of speki"
license = "GPL-2.0-only"


[dependencies]
dirs = "5.0.1"
gkquad = "0.0.4"
samsvar = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio = "1.40.0"
toml = "0.8.19"
uuid = { version = "1.0", features = ["v4", "serde"] }
