[package]
name = "speki-core"
version = "0.1.4"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "core functionality of speki"
license = "GPL-2.0-only"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.1"
#samsvar = { path = "../../val_match" }
samsvar = "0.1.2"
gkquad = "0.0.4"
serde_json = "1.0.128"
tokio = "1.40.0"
toml = "0.8.19"
uuid = { version = "1.0", features = ["v4", "serde"] }
sanitize-filename = "0.5.0"
graphviz-rust = "0.9.0"
git2 = "0.19.0"
url = "2.5.2"
walkdir = "2.5.0"
